change О НАС to About us

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                       <span></span>
                   </button>
                   <ul class="nav_wrapper-list">
-                      <li><a href="#">О НАС</a></li>
+                      <li><a href="#">About us</a></li>
                       <li><a href="#">ТЕХНИКА</a></li>
                       <li><a href="#">КОНТАКТЫ</a></li>
                       <li><a href="#">ОТЗЫВЫ</a></li>
